// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tester/TopBanner/TopBannerInternal SkipLinkFocusedBreakpointL play-test 1`] = `
<div data-test-block="true">
  <header class="_topBanner_192u7_57 ">
    <a href="main"
       class="_skipLink_1qmlj_1 _skipLink_192u7_159"
       data-skip-link="ds-skip-link"
    >
      <span class="_skipLinkContent_1qmlj_21">
        <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_1qmlj_44"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M4 14.64L12 21.5L20 14.64L18.33 12.7L13.25 17.05L13.25 3.5H10.75L10.75 17.05L5.67 12.7L4 14.64Z">
          </path>
        </svg>
        Hopp til hovedinnhold
      </span>
    </a>
    <div class="_topContainer_192u7_90">
      <div class="_contentContainer_192u7_98 ">
        <a class="_logo_192u7_66"
           href="#"
        >
          <img class="_logoImage_192u7_73"
               src="[REMOVED]"
               alt="til startsiden kakeportalen"
          >
        </a>
        <span class="_titleWrapper_192u7_10">
        </span>
      </div>
    </div>
  </header>
</div>
`;

exports[`Tester/TopBanner/TopBannerInternal SkipLinkFocusedMobileScreen play-test 1`] = `
<div data-test-block="true">
  <header class="_topBanner_192u7_57 ">
    <a href="main"
       class="_skipLink_1qmlj_1 _skipLink_192u7_159"
       data-skip-link="ds-skip-link"
    >
      <span class="_skipLinkContent_1qmlj_21">
        <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_1qmlj_44"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M4 14.64L12 21.5L20 14.64L18.33 12.7L13.25 17.05L13.25 3.5H10.75L10.75 17.05L5.67 12.7L4 14.64Z">
          </path>
        </svg>
        Hopp til hovedinnhold
      </span>
    </a>
    <div class="_topContainer_192u7_90">
      <div class="_contentContainer_192u7_98 ">
        <a class="_logo_192u7_66"
           href="#"
        >
          <img class="_logoImage_192u7_73"
               src="[REMOVED]"
               alt="til startsiden kakeportalen"
          >
        </a>
        <span class="_titleWrapper_192u7_10">
        </span>
      </div>
    </div>
  </header>
</div>
`;

exports[`Tester/TopBanner/TopBannerInternal WithAttributes play-test 1`] = `
<div data-test-block="true">
  <header id="htmlId"
          lang="nb"
          data-testid="123ID"
          class="_topBanner_192u7_57 dummyClassname"
  >
    <a href="main"
       class="_skipLink_1qmlj_1 _skipLink_192u7_159"
       data-skip-link="ds-skip-link"
    >
      <span class="_skipLinkContent_1qmlj_21">
        <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_1qmlj_44"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M4 14.64L12 21.5L20 14.64L18.33 12.7L13.25 17.05L13.25 3.5H10.75L10.75 17.05L5.67 12.7L4 14.64Z">
          </path>
        </svg>
        Hopp til hovedinnhold
      </span>
    </a>
    <div class="_topContainer_192u7_90">
      <div class="_contentContainer_192u7_98 ">
        <a class="_logo_192u7_66"
           href="#"
        >
          <img class="_logoImage_192u7_73"
               src="[REMOVED]"
               alt="til startsiden kakeportalen"
          >
        </a>
        <span class="_titleWrapper_192u7_10">
        </span>
      </div>
    </div>
  </header>
</div>
`;

exports[`Tester/TopBanner/TopBannerInternal WithChildren play-test 1`] = `
<div data-test-block="true">
  <header class="_topBanner_192u7_57 ">
    <a href="main"
       class="_skipLink_1qmlj_1 _skipLink_192u7_159"
       data-skip-link="ds-skip-link"
    >
      <span class="_skipLinkContent_1qmlj_21">
        <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_1qmlj_44"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M4 14.64L12 21.5L20 14.64L18.33 12.7L13.25 17.05L13.25 3.5H10.75L10.75 17.05L5.67 12.7L4 14.64Z">
          </path>
        </svg>
        Hopp til hovedinnhold
      </span>
    </a>
    <div class="_topContainer_192u7_90">
      <div class="_contentContainer_192u7_98 _contentContainer_withChildren_192u7_117">
        <a class="_logo_192u7_66"
           href="#"
        >
          <img class="_logoImage_192u7_73"
               src="[REMOVED]"
               alt="til startsiden kakeportalen"
          >
        </a>
        <span class="_titleWrapper_192u7_10">
          <span>
            Saksbehandlingsløsning med en overskrift som er lang
          </span>
          <span>
            En sekundær overskrift som også er lang
          </span>
        </span>
        <div class="_childrenContainer_192u7_1">
          <div class="_alignRight_192u7_5">
            <a class="_link_z7jba_1 _link_white_z7jba_1 marginL"
               href="/hjelp"
            >
              <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_z7jba_35 _icon_isCustom_z7jba_41"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-hidden="true"
                   role="img"
              >
                <path d="M11 18h2v-2h-2v2Zm1-16C6.477 2 2 6.477 2 12A10 10 0 1 0 12 2Zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8Zm0-14a4 4 0 0 0-4 4h2a2 2 0 1 1 4 0c0 2-3 1.75-3 5h2c0-2.25 3-2.5 3-5a4 4 0 0 0-4-4Z">
                </path>
              </svg>
              Hjelp
            </a>
            <button class="_button_12a0b_1 _button_withIconLeft_12a0b_8  marginL"
                    data-brightness="light"
                    type="button"
            >
              <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_12a0b_42"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-hidden="true"
                   role="img"
              >
                <path d="M12 15.5a3.5 3.5 0 1 1 0-7 3.5 3.5 0 0 1 0 7Zm7.43-2.53c.04-.32.07-.64.07-.97 0-.33-.03-.66-.07-1l2.11-1.63c.19-.15.24-.42.12-.64l-2-3.46c-.12-.22-.39-.31-.61-.22l-2.49 1c-.52-.39-1.06-.73-1.69-.98l-.37-2.65A.506.506 0 0 0 14 2h-4c-.25 0-.46.18-.5.42l-.37 2.65c-.63.25-1.17.59-1.69.98l-2.49-1c-.22-.09-.49 0-.61.22l-2 3.46c-.13.22-.07.49.12.64L4.57 11c-.04.34-.07.67-.07 1 0 .33.03.65.07.97l-2.11 1.66c-.19.15-.25.42-.12.64l2 3.46c.12.22.39.3.61.22l2.49-1.01c.52.4 1.06.74 1.69.99l.37 2.65c.04.24.25.42.5.42h4c.25 0 .46-.18.5-.42l.37-2.65c.63-.26 1.17-.59 1.69-.99l2.49 1.01c.22.08.49 0 .61-.22l2-3.46c.12-.22.07-.49-.12-.64l-2.11-1.66Z">
                </path>
              </svg>
              <span class>
                Tilpass løsningen
              </span>
            </button>
            <button class="_button_12a0b_1 _button_withIconLeft_12a0b_8  marginL"
                    data-brightness="light"
                    type="button"
            >
              <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_12a0b_42"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-hidden="true"
                   role="img"
              >
                <path d="M12 15.5a3.5 3.5 0 1 1 0-7 3.5 3.5 0 0 1 0 7Zm7.43-2.53c.04-.32.07-.64.07-.97 0-.33-.03-.66-.07-1l2.11-1.63c.19-.15.24-.42.12-.64l-2-3.46c-.12-.22-.39-.31-.61-.22l-2.49 1c-.52-.39-1.06-.73-1.69-.98l-.37-2.65A.506.506 0 0 0 14 2h-4c-.25 0-.46.18-.5.42l-.37 2.65c-.63.25-1.17.59-1.69.98l-2.49-1c-.22-.09-.49 0-.61.22l-2 3.46c-.13.22-.07.49.12.64L4.57 11c-.04.34-.07.67-.07 1 0 .33.03.65.07.97l-2.11 1.66c-.19.15-.25.42-.12.64l2 3.46c.12.22.39.3.61.22l2.49-1.01c.52.4 1.06.74 1.69.99l.37 2.65c.04.24.25.42.5.42h4c.25 0 .46-.18.5-.42l.37-2.65c.63-.26 1.17-.59 1.69-.99l2.49 1.01c.22.08.49 0 .61-.22l2-3.46c.12-.22.07-.49-.12-.64l-2.11-1.66Z">
                </path>
              </svg>
              <span class>
                Meld feil
              </span>
            </button>
          </div>
        </div>
        <div class="_nameContainer_192u7_128">
          <div>
            <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _nameContainerIcon_192u7_152"
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-hidden="true"
                 role="img"
            >
              <path d="M12 4a4 4 0 1 1 0 8 4 4 0 0 1 0-8Zm0 10c4.42 0 8 1.79 8 4v2H4v-2c0-2.21 3.58-4 8-4Z">
              </path>
            </svg>
          </div>
          <span class="_nameContainerName_192u7_147">
            Johansen, Krystall Pepsi
          </span>
        </div>
      </div>
    </div>
  </header>
</div>
`;

exports[`Tester/TopBanner/TopBannerInternal WithCustomLogo smoke-test 1`] = `
<div data-test-block="true">
  <header class="_topBanner_192u7_57 ">
    <a href="main"
       class="_skipLink_1qmlj_1 _skipLink_192u7_159"
       data-skip-link="ds-skip-link"
    >
      <span class="_skipLinkContent_1qmlj_21">
        <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_1qmlj_44"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M4 14.64L12 21.5L20 14.64L18.33 12.7L13.25 17.05L13.25 3.5H10.75L10.75 17.05L5.67 12.7L4 14.64Z">
          </path>
        </svg>
        Hopp til hovedinnhold
      </span>
    </a>
    <div class="_topContainer_192u7_90">
      <div class="_contentContainer_192u7_98 ">
        <a class="_logo_192u7_66"
           href="#"
        >
          <img class="_logoImage_192u7_73"
               src="[REMOVED]"
               alt="til startsiden kakeportalen"
          >
        </a>
        <span class="_titleWrapper_192u7_10">
        </span>
      </div>
    </div>
  </header>
</div>
`;

exports[`Tester/TopBanner/TopBannerInternal WithCustomTheme smoke-test 1`] = `
<div data-test-block="true">
  <header class="_topBanner_192u7_57 dummyCustomTheme">
    <a href="main"
       class="_skipLink_1qmlj_1 _skipLink_192u7_159"
       data-skip-link="ds-skip-link"
    >
      <span class="_skipLinkContent_1qmlj_21">
        <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_1qmlj_44"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M4 14.64L12 21.5L20 14.64L18.33 12.7L13.25 17.05L13.25 3.5H10.75L10.75 17.05L5.67 12.7L4 14.64Z">
          </path>
        </svg>
        Hopp til hovedinnhold
      </span>
    </a>
    <div class="_topContainer_192u7_90">
      <div class="_contentContainer_192u7_98 ">
        <a class="_logo_192u7_66"
           href="#"
        >
          <img class="_logoImage_192u7_73"
               src="[REMOVED]"
               alt="til startsiden kakeportalen"
          >
        </a>
        <span class="_titleWrapper_192u7_10">
        </span>
      </div>
    </div>
  </header>
</div>
`;

exports[`Tester/TopBanner/TopBannerInternal WithDefaults play-test 1`] = `
<div data-test-block="true">
  <header class="_topBanner_192u7_57 ">
    <a href="main"
       class="_skipLink_1qmlj_1 _skipLink_192u7_159"
       data-skip-link="ds-skip-link"
    >
      <span class="_skipLinkContent_1qmlj_21">
        <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_1qmlj_44"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M4 14.64L12 21.5L20 14.64L18.33 12.7L13.25 17.05L13.25 3.5H10.75L10.75 17.05L5.67 12.7L4 14.64Z">
          </path>
        </svg>
        Hopp til hovedinnhold
      </span>
    </a>
    <div class="_topContainer_192u7_90">
      <div class="_contentContainer_192u7_98 ">
        <a class="_logo_192u7_66"
           href="#"
        >
          <img class="_logoImage_192u7_73"
               src="[REMOVED]"
               alt="til startsiden kakeportalen"
          >
        </a>
        <span class="_titleWrapper_192u7_10">
        </span>
      </div>
    </div>
  </header>
</div>
`;

exports[`Tester/TopBanner/TopBannerInternal WithDemoMode play-test 1`] = `
<div data-test-block="true">
  <header class="_topBanner_192u7_57 ">
    <a href="main"
       class="_skipLink_1qmlj_1 _skipLink_192u7_159"
       data-skip-link="ds-skip-link"
    >
      <span class="_skipLinkContent_1qmlj_21">
        <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_1qmlj_44"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M4 14.64L12 21.5L20 14.64L18.33 12.7L13.25 17.05L13.25 3.5H10.75L10.75 17.05L5.67 12.7L4 14.64Z">
          </path>
        </svg>
        Hopp til hovedinnhold
      </span>
    </a>
    <div class="_constructionBand_192u7_27">
      <div class="_constructionBandTitle_192u7_32">
        demo
      </div>
    </div>
    <div class="_topContainer_192u7_90">
      <div class="_contentContainer_192u7_98 ">
        <a class="_logo_192u7_66"
           href="#"
        >
          <img class="_logoImage_192u7_73"
               src="[REMOVED]"
               alt="til startsiden kakeportalen"
          >
        </a>
        <span class="_titleWrapper_192u7_10">
        </span>
      </div>
    </div>
  </header>
</div>
`;

exports[`Tester/TopBanner/TopBannerInternal WithLogoClick play-test 1`] = `
<div data-test-block="true">
  <header class="_topBanner_192u7_57 ">
    <a href="main"
       class="_skipLink_1qmlj_1 _skipLink_192u7_159"
       data-skip-link="ds-skip-link"
    >
      <span class="_skipLinkContent_1qmlj_21">
        <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_1qmlj_44"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M4 14.64L12 21.5L20 14.64L18.33 12.7L13.25 17.05L13.25 3.5H10.75L10.75 17.05L5.67 12.7L4 14.64Z">
          </path>
        </svg>
        Hopp til hovedinnhold
      </span>
    </a>
    <div class="_topContainer_192u7_90">
      <div class="_contentContainer_192u7_98 ">
        <a class="_logo_192u7_66"
           href="#"
        >
          <img class="_logoImage_192u7_73"
               src="[REMOVED]"
               alt="til startsiden kakeportalen"
          >
        </a>
        <span class="_titleWrapper_192u7_10">
        </span>
      </div>
    </div>
  </header>
</div>
`;

exports[`Tester/TopBanner/TopBannerInternal WithLongTitleDescriptionMobile smoke-test 1`] = `
<div data-test-block="true">
  <header class="_topBanner_192u7_57 ">
    <a href="main"
       class="_skipLink_1qmlj_1 _skipLink_192u7_159"
       data-skip-link="ds-skip-link"
    >
      <span class="_skipLinkContent_1qmlj_21">
        <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_1qmlj_44"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M4 14.64L12 21.5L20 14.64L18.33 12.7L13.25 17.05L13.25 3.5H10.75L10.75 17.05L5.67 12.7L4 14.64Z">
          </path>
        </svg>
        Hopp til hovedinnhold
      </span>
    </a>
    <div class="_topContainer_192u7_90">
      <div class="_contentContainer_192u7_98 ">
        <a class="_logo_192u7_66"
           href="#"
        >
          <img class="_logoImage_192u7_73"
               src="[REMOVED]"
               alt="til startsiden kakeportalen"
          >
        </a>
        <span class="_titleWrapper_192u7_10">
          <span>
            kakeportalen kakeportalen kakeportalen kakeportalen
          </span>
          <span>
            kaka er en løgnkaka er en løgnkaka er en løgnkaka er en løgn
          </span>
        </span>
        <div class="_nameContainer_192u7_128">
          <div>
            <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _nameContainerIcon_192u7_152"
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-hidden="true"
                 role="img"
            >
              <path d="M12 4a4 4 0 1 1 0 8 4 4 0 0 1 0-8Zm0 10c4.42 0 8 1.79 8 4v2H4v-2c0-2.21 3.58-4 8-4Z">
              </path>
            </svg>
          </div>
          <span class="_nameContainerName_192u7_147">
            Sandra Saksbehandler
          </span>
        </div>
      </div>
    </div>
  </header>
</div>
`;

exports[`Tester/TopBanner/TopBannerInternal WithRef play-test 1`] = `
<div data-test-block="true">
  <header class="_topBanner_192u7_57 "
          id="dummyIdForwardedFromRef"
  >
    <a href="main"
       class="_skipLink_1qmlj_1 _skipLink_192u7_159"
       data-skip-link="ds-skip-link"
    >
      <span class="_skipLinkContent_1qmlj_21">
        <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_1qmlj_44"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M4 14.64L12 21.5L20 14.64L18.33 12.7L13.25 17.05L13.25 3.5H10.75L10.75 17.05L5.67 12.7L4 14.64Z">
          </path>
        </svg>
        Hopp til hovedinnhold
      </span>
    </a>
    <div class="_topContainer_192u7_90">
      <div class="_contentContainer_192u7_98 ">
        <a class="_logo_192u7_66"
           href="#"
        >
          <img class="_logoImage_192u7_73"
               src="[REMOVED]"
               alt="til startsiden kakeportalen"
          >
        </a>
        <span class="_titleWrapper_192u7_10">
        </span>
      </div>
    </div>
  </header>
</div>
`;

exports[`Tester/TopBanner/TopBannerInternal WithTitleDescriptionUser play-test 1`] = `
<div data-test-block="true">
  <header class="_topBanner_192u7_57 ">
    <a href="main"
       class="_skipLink_1qmlj_1 _skipLink_192u7_159"
       data-skip-link="ds-skip-link"
    >
      <span class="_skipLinkContent_1qmlj_21">
        <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_1qmlj_44"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M4 14.64L12 21.5L20 14.64L18.33 12.7L13.25 17.05L13.25 3.5H10.75L10.75 17.05L5.67 12.7L4 14.64Z">
          </path>
        </svg>
        Hopp til hovedinnhold
      </span>
    </a>
    <div class="_topContainer_192u7_90">
      <div class="_contentContainer_192u7_98 ">
        <a class="_logo_192u7_66"
           href="#"
        >
          <img class="_logoImage_192u7_73"
               src="[REMOVED]"
               alt="til startsiden kakeportalen"
          >
        </a>
        <span class="_titleWrapper_192u7_10">
          <span>
            kakeportalen
          </span>
          <span>
            kaka er en løgn
          </span>
        </span>
        <div class="_nameContainer_192u7_128">
          <div>
            <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _nameContainerIcon_192u7_152"
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-hidden="true"
                 role="img"
            >
              <path d="M12 4a4 4 0 1 1 0 8 4 4 0 0 1 0-8Zm0 10c4.42 0 8 1.79 8 4v2H4v-2c0-2.21 3.58-4 8-4Z">
              </path>
            </svg>
          </div>
          <span class="_nameContainerName_192u7_147">
            Sandra Saksbehandler
          </span>
        </div>
      </div>
    </div>
  </header>
</div>
`;
